--- a/thesis intermedia/3- state of art/3.3/3.3.1 Prompt.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.1 Prompt.md
@@ -71,26 +71,26 @@ This stage forms the interactive core of the **NL→Dash** system, where dialogu
 
 # **3.1 Fundamentos e Tecnologias Relacionadas**
 
-A primeira etapa do pipeline **NL→Dash** é responsável por interpretar o pedido inicial do utilizador em linguagem natural, identificando a **intenção principal** (“criar dashboard”, “atualizar métrica”, “aplicar filtro”, “ajustar limiar”) e extraindo **informação contextual mínima** (como o domínio, o tipo de métrica ou a janela temporal relevante). O desempenho desta fase depende diretamente da capacidade dos **Modelos de Linguagem de Grande Escala (LLMs)** para compreender intenções, resolver ambiguidades e manter coerência conversacional ao longo de múltiplas interações.
+A primeira etapa do pipeline **NL→Dash** é responsável por interpretar o pedido inicial do utilizador em linguagem natural, identificando a **intenção principal** (“criar dashboard”) e extraindo **informação contextual mínima** (como o tipo de métrica). O desempenho desta fase depende diretamente da capacidade dos **Modelos de Linguagem de Grande Escala (LLMs)** para compreender intenções, resolver ambiguidades e manter coerência conversacional ao longo de múltiplas interações.
 
-A utilização de **LLMs com API pública** é essencial em projetos que exigem integração rápida, controlo de custos e experimentação contínua. No entanto, a seleção do modelo deve equilibrar **fidelidade estrutural** (geração de saídas JSON válidas), **latência de inferência** e **robustez semântica**. Importa salientar que muitos resultados reportados por fornecedores são obtidos em ambientes controlados, podendo diferir do desempenho real em tarefas específicas como a do **NL→Dash**, centrada na geração e refinamento de configurações de dashboards em tempo real. Ainda existe uma lacuna notória de benchmarks independentes que avaliem **consistência multi-turn** e **validação estrutural** em contextos de interação contínua, como os contact centers descritos no projeto.
+~~A utilização de **LLMs com API pública** é essencial em projetos que exigem integração rápida, controlo de custos e experimentação contínua. No entanto, a seleção do modelo deve equilibrar **fidelidade estrutural** (geração de saídas JSON válidas), **latência de inferência** e **robustez semântica**. Importa salientar que muitos resultados reportados por fornecedores são obtidos em ambientes controlados, podendo diferir do desempenho real em tarefas específicas como a do **NL→Dash**, centrada na geração e refinamento de configurações de dashboards em tempo real. Ainda existe uma lacuna notória de benchmarks independentes que avaliem **consistência multi-turn** e **validação estrutural** em contextos de interação contínua, como os contact centers descritos no projeto.~~
 
 ---
 
 ## **Panorama Atual dos LLMs com API Pública**
 
-Em outubro de 2025, o ecossistema de LLMs caracteriza-se por diversidade arquitetural e rápida iteração de versões, com destaque para **arquiteturas Mixture-of-Experts (MoE)**, **modos de raciocínio seletivo** e **capacidades multimodais**. As famílias **Llama 4**, **Qwen3**, **DeepSeek V3** e **Granite 3.2** (open-source) e os modelos **GPT-5**, **Gemini 2.5** e **Claude 4.5** (proprietários) representam os eixos principais de comparação no mercado atual. Para contextualização, inclui-se ainda o **Grok-4 Heavy** (xAI), modelo de grande escala lançado em junho de 2025, focado em raciocínio matemático mas sem API pública generalizada.
+Em outubro de 2025, o ecossistema de LLMs caracteriza-se por diversidade arquitetural e rápida iteração de versões. As famílias **Llama 4**, **Qwen3**, **DeepSeek V3** e **Granite 3.2** (open-source) e os modelos **GPT-5**, **Gemini 2.5** e **Claude 4.5** (proprietários) representam os eixos principais de comparação no mercado atual. Para contextualização, inclui-se ainda o **Grok-4 Heavy** (xAI), modelo de grande escala lançado em junho de 2025, focado em raciocínio matemático mas sem API pública generalizada.
 
-As métricas comparativas apresentadas nesta secção foram obtidas a partir de **model cards oficiais**, **leaderboards independentes** (SWE-bench Verified, AIME 2025, LiveCodeBench) e **documentação de API pública**, consultadas em outubro de 2025. Valores assinalados com (*) são _self-reported_ pelos fornecedores e (~) estimativas independentes.
+As métricas comparativas apresentadas nesta secção foram obtidas a partir de **model cards oficiais**, **leaderboards independentes** (SWE-bench Verified, AIME 2025, LiveCodeBench) e **documentação de API pública**, consultadas em outubro de 2025. ~~Valores assinalados com (*) são _self-reported_ pelos fornecedores e (~) estimativas independentes.~~
 
 
 ---
 
 ### **Modelos Proprietários**
 
-O **GPT-5**, lançado pela OpenAI a 7 de agosto de 2025, representa o padrão de referência em raciocínio geral. Disponibiliza variantes de diferentes dimensões (Standard, Mini, Nano), com **janela de contexto de até 400 000 tokens** e desempenho de **94,6% no AIME 2025** e **74,9% no SWE-bench Verified** [3][10]. O modelo apresenta **elevada consistência sintática** em tarefas de _function calling_, o que o torna particularmente eficaz na geração de JSON. Contudo, o custo médio de **≈ 1,25 USD/M input tokens** e a **latência média (~900 ms)** reportada em contextos dialogais limitam a sua adequação a sistemas em tempo real.
+==O **GPT-5**, lançado pela OpenAI a 7 de agosto de 2025, representa o padrão de referência em raciocínio geral==. Disponibiliza variantes de diferentes dimensões (GPT-5, GPT-5 mini e GPT-5 nano), com ==**janela de contexto de até 400 000 tokens**== (~272k input + 128k output) e ==desempenho de **94,6% no AIME 2025** e **74,9% no SWE-bench Verified**== [3][10][13]. Segundo a OpenAI, o modelo apresenta **elevada consistência sintática** em tarefas de _function calling_, o que o torna particularmente eficaz na geração de JSON. Contudo, o ==custo médio de **≈ 1,25 USD/M input tokens** e aliado a **tempos de resposta que variam entre ~1 e vários segundos**, limita a sua adequação a sistemas com requisitos de tempo real.==
 
-O **Gemini 2.5**, desenvolvido pela Google DeepMind, tem duas variantes principais — **Pro** (março de 2025) e **Flash** (setembro de 2025) [4][5]. O modo “Deep Think” reforça o raciocínio multimodal (**86,7% no AIME 2025**, **82% no MMMU**), enquanto o **Flash** otimiza latência e custo, reduzindo em cerca de **25% o número de tokens** gerados. Apesar do bom equilíbrio entre eficiência e qualidade, benchmarks independentes apontam **53,6% no SWE-bench Verified**, sugerindo desempenho moderado em tarefas estruturadas de código. A integração nativa no ecossistema Google constitui vantagem operacional, mas também uma restrição tecnológica.
+O **Gemini 2.5**, desenvolvido pela Google DeepMind, tem duas variantes principais — ==**Pro** (março de 2025)== e ==**Flash** (setembro de 202==5) [4][14][15]. O modo “Deep Think” reforça o raciocínio multimodal ==(**88% no AIME 2025**, **82% no MMMU**)==, enquanto o **Flash** otimiza latência e custo, reduzindo em cerca de ==**20% - 30% o número de tokens**== gerados. Apesar do bom equilíbrio entre eficiência e qualidade, benchmarks independentes apontam ==**53,6% no SWE-bench Verified**,== sugerindo desempenho moderado em tarefas estruturadas de código. A integração nativa no ecossistema Google constitui vantagem operacional, mas também uma restrição tecnológica.
 
 O **Claude 4.5**, da Anthropic (setembro de 2025), destaca-se pela **segurança e explicabilidade**, registando **70,6% no SWE-bench Verified** e picos de **77,2%** em variantes otimizadas [8]. O custo elevado e a ausência de suporte _on-premises_ limitam a sua utilização em pipelines de inferência contínua, mas o modelo permanece uma referência de fiabilidade para aplicações empresariais com elevados requisitos de compliance.
 
@@ -153,13 +153,16 @@ Estas conclusões orientam a configuração do módulo de interpretação de int
 
 [1] Meta AI, _The Llama 4 herd: The beginning of a new era..._, Meta Blog, abr. 2025.  
 [2] Hugging Face, _Llama 4 Model Card_, 2025.  
-[3] OpenAI, _Introducing GPT-5_, ago. 2025.  
-[4] Google DeepMind, _Gemini 2.5: Deep Think and Flash Variants_, mar.–set. 2025.  
+[3] OpenAI, “Introducing GPT-5,” Aug. 2025. [Online]. Available: https://openai.com/index/introducing-gpt-5/
+[10] OpenAI, “API Pricing.” [Online]. Available: https://openai.com/api/pricing/
+[13] OpenAI, “GPT-5,” Aug. 2025. [Online]. Available: https://openai.com/gpt-5/
+[4] Google DeepMind, _Gemini 2.5: Deep Think and Flash Variants_, mar.–set. 2025.  https://deepmind.google/models/gemini/pro/
+[14] https://blog.google/technology/google-deepmind/google-gemini-updates-io-2025/#flash-improvements
+[15] https://www.swebench.com/?utm_source=chatgpt.com
 [5] Google AI Studio, _Gemini Pricing and Model Specs_, 2025.  
 [6] Alibaba Cloud, _Qwen3 Model Card and Benchmarks_, abr.–set. 2025.  
 [7] IBM Research, _Announcing Granite 3.2_, fev. 2025.  
 [8] Anthropic, _Claude 4.5 Release Notes_, set. 2025.  
 [9] DeepSeek AI, _DeepSeek V3 Technical Report_, set. 2025.  
-[10] SWE-bench Leaderboard, _SWE-bench Verified_, out. 2025.  
 [11] AIME 2025 Benchmark, _AIME 2025 Leaderboard_, out. 2025.  
 [12] LiveCodeBench, _Leaderboard_, out. 2025.
