--- a/thesis intermedia/3- state of art/3.3/3.3.2 Semantic Mapping.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.2 Semantic Mapping.md
@@ -449,17 +449,13 @@ O **Mapeamento Semântico** (Stage 2) é a ponte entre a intenção interpretada
 
 # 3.3.2-A Análise Tecnológica (dbt, Cube.js, LookML, camada semântica custom)
 
-## Objetivo
-
-Comparar tecnologias que promovem **consistência semântica** entre linguagem natural, métricas de negócio e o modelo de dados, e justificar a opção por uma **camada semântica custom** no **NL→Dash** (tempo real, baixo acoplamento e domínio CCaaS).
-
 ### dbt (Core, Semantic Layer e MetricFlow)
 
-O **dbt Core** é _open-source_ e centra-se na **transformação em SQL** com documentação e linhagem de modelos; serve bem como **fonte de verdade** para métricas e modelos no _warehouse_ [1]. A **dbt Semantic Layer**, **assente no MetricFlow**, **centraliza definições de métricas** e expõe-nas de forma consistente a ferramentas a jusante [2]; a arquitetura do ecossistema explica como a camada **gera SQL e _joins_** e disponibiliza interfaces de consulta [4]. O **MetricFlow** permite **definir e consultar métricas de forma declarativa**, automatizando queries dimensionadas e disponibilizando **comandos/SDKs** para integração [3][5]. **Enquadramento no projeto:** excelente para **governação, linhagem e versionamento** de métricas; menos indicado, por si só, para mapeamento semântico **em tempo real** orientado a conversação.
+O **dbt Core** é _open-source_ e centra-se na **transformação em SQL** com documentação e linhagem de modelos; serve bem como **fonte de verdade** para métricas e modelos no _warehouse_ [1]. A **dbt Semantic Layer**, **assente no MetricFlow**, **centraliza definições de métricas** e expõe-nas de forma consistente a ferramentas a jusante [2]; a arquitetura do ecossistema explica como a camada **gera SQL e _joins_** e disponibiliza interfaces de consulta [4]. O **MetricFlow** permite **definir e consultar métricas de forma declarativa**, automatizando queries dimensionadas e disponibilizando **comandos/SDKs** para integração [3][5]. 
 
 ### Cube / Cube.js
 
-O **Cube** posiciona-se como **camada semântica universal**, com **APIs** para servir métricas/dimensões e **mecanismos de _caching_ e pré-agregações** para acelerar dashboards [6]. Suporta **experiências _real-time_** via **REST + WebSocket** (subscrições) e documenta **casos de uso de real-time analytics** [7][8][9]. **Enquadramento no projeto:** muito alinhado com **servir métricas em baixa latência**; útil como **gateway semântico** ou referência arquitetural para o teu fluxo **SemanticPlan → JSON**.
+O **Cube** posiciona-se como **camada semântica universal**, com **APIs** para servir métricas/dimensões e **mecanismos de _caching_ e pré-agregações** para acelerar dashboards [6]. Suporta **experiências _real-time_** via **REST + WebSocket** (subscrições) e documenta **casos de uso de real-time analytics** [7][8][9].
 
 ### LookML (Looker)
 
