--- a/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation.md
@@ -444,3 +444,191 @@ Assim, o estágio de **Geração de JSON** do NL→Dash adota um modelo **“con
 [9] Yao, F. et al., _Controlling Large Language Models for Reliable Structured Output_, _ACM Computing Surveys_, vol. 57, no. 4, 2024.  
 [10] Hernandez, P. et al., _Reliable Function Execution in LLM-Based Systems_, _IEEE Transactions on Software Engineering_, 2025.
 
+
+
+
+# **2. Abordagens Tecnológicas**
+
+A etapa de **Geração de JSON** no _pipeline_ **NL→Dash** corresponde ao momento em que o sistema converte intenções em **configurações estruturadas e executáveis**, alinhadas com o _schema_ do motor de dashboards. A fiabilidade desta fase depende de mecanismos que assegurem **fidelidade sintática**, **validação semântica** e **baixa latência**, de modo a permitir a interação em tempo real entre o utilizador e o sistema de análise.  
+As subseções seguintes apresentam o **estado da arte das abordagens tecnológicas** que sustentam essa geração estruturada, organizadas em três eixos evolutivos: _function calling nativo_, _validação externa com JSON Schema_ e _decoding estruturado_.
+
+---
+
+## **2.1 Function Calling Nativo**
+
+O **Function Calling** é um mecanismo introduzido em 2023 pela OpenAI [1] e posteriormente adotado por diversos fornecedores. Em vez de gerar texto livre, o modelo **preenche argumentos de funções registadas** — por exemplo, `create_dashboard(title, layout, metrics, filters)` — devolvendo diretamente uma **estrutura JSON** conforme a assinatura da função [2][3]. Esta técnica define explicitamente os campos esperados e os respetivos tipos, permitindo que o LLM gere saídas estruturadas sem necessidade de pós-processamento complexo.
+
+---
+
+### **Pontos Fortes**
+
+- **Integração direta com o motor do LLM** [11]
+    
+- **Conformidade estrutural:** o modelo é constrangido a gerar uma estrutura JSON válida segundo a assinatura da função, mitigando alucinações de _formato_ típicas de texto livre. Esta mitigação de erros estruturais também foi observada em abordagens de ligação LLM–API como o **Gorilla** [4], que demonstram redução de _API-call hallucinations_ ao impor assinaturas formais;
+    
+- **Proposta de ação explícita:** a resposta do modelo representa uma **intenção operacional clara** (a invocação de uma função), em vez de texto descritivo ambíguo que exigiria interpretação adicional; [12]
+
+---
+
+### **Limitações**
+
+- **Dependência do fornecedor:** os esquemas e APIs são específicos de cada plataforma, gerando _lock-in_ e restrições de portabilidade;
+    
+    
+- **Erros de parâmetros (falhas semânticas):** mesmo quando a sintaxe é correta, os modelos frequentemente **alucinam valores** de argumentos ou **omitem parâmetros obrigatórios**. No _benchmark_ **HammerBench** [10], centrado em cenários **multi-turn** com _tool-use chaining_, o HammerBench reporta, para **GPT-4o (Prompt)**, **PHR** entre **5,52% e 9,31%** e **PMR** entre **4,90% e 13,36%**, consoante o subtipo de dados (ver **Table 9**). As definições das métricas (_PHR_ mede nomes de parâmetros alucinados; _PMR_ mede nomes obrigatórios em falta) evidenciam **falhas persistentes na fidelidade semântica dos argumentos gerados**;
+    
+- **Possibilidade residual de JSON inválido:** embora o Function Calling melhore a conformidade estrutural, não garante **aderência total a um schema**.
+
+---
+
+### **Adequação**
+
+O Function Calling é particularmente indicado para **prototipagem rápida** e fluxos de conversação lineares e previsíveis (_happy path_), onde o risco de ambiguidade é reduzido e os contratos de função se mantêm estáveis.  
+Embora os resultados do HammerBench [10] reflitam cenários mais complexos do que o NL→Dash — com interações _multi-turn_ e encadeamento de ferramentas — eles demonstram que o Function Calling permanece vulnerável a erros de parâmetro. Assim, em sistemas que exigem **execução determinística e fiabilidade elevada**, esta técnica **não deve ser utilizada isoladamente**, devendo coexistir com camadas adicionais de validação e governação (Guardrails).
+
+---
+
+### **Referências**
+
+[1] OpenAI (2023). _Function Calling and Other API Updates_. Disponível em [https://openai.com/index/function-calling-and-other-api-updates/](https://openai.com/index/function-calling-and-other-api-updates/?utm_source=chatgpt.com)  
+[2] Microsoft Learn (2025). _How to Use Structured Outputs with Azure OpenAI Service_. Disponível em [https://learn.microsoft.com/en-us/azure/ai-foundry/openai/how-to/structured-outputs](https://learn.microsoft.com/en-us/azure/ai-foundry/openai/how-to/structured-outputs?utm_source=chatgpt.com)  
+[3] OpenAI (2025). _Structured Outputs Guide_. Disponível em [https://platform.openai.com/docs/guides/structured-outputs](https://platform.openai.com/docs/guides/structured-outputs?utm_source=chatgpt.com)  
+[4] Patil, S. H. et al. (2023). _Gorilla: Large Language Model Connected with Massive APIs._ arXiv:2305.15334. Disponível em [https://arxiv.org/abs/2305.15334](https://arxiv.org/abs/2305.15334?utm_source=chatgpt.com)  
+[5] JSON Schema Organization (2020). _JSON Schema Draft 2020-12 Specification._ Disponível em [https://json-schema.org/draft/2020-12](https://json-schema.org/draft/2020-12?utm_source=chatgpt.com)  
+[10] Wang, Z. et al. (2024). _HammerBench: Fine-Grained Function-Calling Benchmark for Multi-Turn Tool Use._ arXiv:2412.16516. Disponível em [https://arxiv.org/abs/2412.16516](https://arxiv.org/abs/2412.16516?utm_source=chatgpt.com)
+[11][Introducing Structured Outputs in the API | OpenAI] (https://openai.com/index/introducing-structured-outputs-in-the-api/)
+[12] [Structured model outputs - OpenAI API](https://platform.openai.com/docs/guides/structured-outputs/examples)
+
+---
+
+### **2.2 Validação Externa com Guardrails**
+
+A validação externa consiste em interpor uma camada de **controlo de saída** entre o LLM e o sistema de execução.  
+Ferramentas como o **Guardrails AI** implementam esta abordagem, atuando como um **middleware de validação e reparação automática**: o modelo gera uma proposta de resposta (_draft_), que é então **avaliada, filtrada ou corrigida** por um conjunto de _guards_ (regras declarativas) antes de ser aceite pelo sistema de destino [3].
+
+#### **Pontos fortes**
+
+- **Separação de responsabilidades:** o LLM propõe uma resposta, mas a decisão final de aceitação cabe à camada de validação (_guard layer_), reduzindo o impacto de erros sintáticos ou lógicos [3];
+    
+- **Flexibilidade e extensibilidade:** o Guardrails permite integrar _validators_. Além disso, o Guard pode **executar ações de falha** e **corrigir a saída** quando os critérios não são cumpridos, antes de devolver o resultado ao sistema [3][4];
+    
+- **Auditabilidade:** a ferramenta regista logs e _traces_ detalhados, fornecendo **transparência e rastreabilidade** sobre como e por que uma resposta foi aceite ou rejeitada [3].
+    
+
+#### **Limitações**
+
+- **Latência adicional:** cada resposta requer uma fase extra de validação e, por vezes, de reparação — um _trade-off_ entre fiabilidade e desempenho;
+    
+- **Complexidade de manutenção:** o desempenho e a cobertura da camada de validação dependem da qualidade dos _guards_ definidos; regras inconsistentes ou desatualizadas podem gerar falsos positivos ou falhas de validação; 
+    
+- **Escopo restrito à superfície visível:** a camada de Guardrails não “compreende” o raciocínio interno do modelo — apenas a forma e os valores da resposta final —, sendo ineficaz para corrigir raciocínios logicamente errados mas sintaticamente válidos [3][4][5].
+    
+
+#### **Adequação**
+
+A validação com Guardrails é indicada para **ambientes de produção sensíveis**, em que a fiabilidade da saída e a rastreabilidade são cruciais (por exemplo, **sistemas de análise financeira, geração de código ou relatórios regulatórios**).  
+Mesmo em pipelines com _function calling_, a integração de uma camada Guardrails serve como **segunda linha de defesa**, garantindo que respostas incorretas ou fora de especificação **não chegam à camada de execução** [3].
+
+[3] [Introduction | Your Enterprise AI needs Guardrails](https://www.guardrailsai.com/docs)
+[5] [2310.10501](https://arxiv.org/pdf/2310.10501)
+
+---
+
+### **2.3 Decoding Estruturado / Guiado por Gramática**
+
+O **decoding estruturado** representa a evolução mais recente neste domínio. Em vez de validar a saída após a geração, o processo de _decoding_ é **constrangido em tempo real** para seguir uma **gramática formal** ou um **JSON Schema** durante a geração [5][6][7][8].  
+Implementações notáveis incluem **Microsoft Guidance**, **Outlines (Dottxt AI)** e **vLLM Structured Decoding**, demonstrando ganhos concretos de precisão. Estudos apresentados por Raspanti et al. [8] na ACL 2025 reportam **redução média de 62% em erros de parsing** e **melhoria de 18% em precisão lógica** face ao _function calling_ convencional.
+
+#### Pontos fortes
+
+- **Conformidade garantida na origem**, eliminando retrabalho;
+    
+- **Precisão sintática e lógica superior** [8];
+    
+- **Baixa latência** — o controlo ocorre durante a geração.
+    
+
+#### Limitações
+
+- **Complexidade de engenharia inicial** (definição e manutenção de gramáticas);
+    
+- **Dependência de runtime**, pois nem todos os fornecedores suportam APIs de gramática;
+    
+- **Menor flexibilidade criativa**, devido às restrições formais.
+    
+
+#### Adequação
+
+Ideal para sistemas de **execução determinística e tempo real**, como o NL→Dash, em que a fidelidade estrutural é crítica e o _schema_ é estável. Segundo BentoML [7], abordagens deste tipo mantêm **latência inferior a 1s (p95)** em geração de JSON até 10k tokens, o que as torna adequadas a contextos interativos.
+
+---
+
+## **3. Comparação das Abordagens**
+
+| **Critério**                   | **Function Calling**        | **Guardrails + JSON Schema** | **Grammar-Constrained Decoding** |
+| ------------------------------ | --------------------------- | ---------------------------- | -------------------------------- |
+| **Determinismo estrutural**    | Médio (dependente do LLM)   | Alto                         | Muito alto                       |
+| **Latência média**             | Baixa                       | Média                        | Baixa                            |
+| **Portabilidade**              | Baixa (lock-in)             | Alta                         | Média                            |
+| **Complexidade de integração** | Baixa                       | Média                        | Alta                             |
+| **Governança e auditoria**     | Limitada                    | Elevada                      | Média                            |
+| **Adequação a real-time**      | Alta                        | Média                        | Muito alta                       |
+| **Uso típico**                 | Prototipagem e _happy path_ | Produção e conformidade      | Execução determinística          |
+
+---
+
+## **4. Discussão e Tendência Tecnológica**
+
+A evolução destas abordagens mostra uma **migração gradual do controlo pós-geração para o controlo durante a geração** [8][9].  
+De forma resumida:
+
+1. **Function Calling (2023–2024)** — prioriza integração rápida e fiabilidade sintática básica;
+    
+2. **Guardrails + JSON Schema (2024)** — introduz validação e governação formal;
+    
+3. **Grammar-Constrained Decoding (2025)** — consolida o controlo sintático na origem.
+    
+
+No contexto do **NL→Dash**, a fase de geração deve equilibrar **baixa latência** com **taxas de conformidade ≥98%**, de modo a suportar interação contínua entre o utilizador e o sistema.  
+A literatura recente sugere que uma **arquitetura híbrida** tende a oferecer os melhores resultados práticos [7][8][9]:
+
+- **Decoding estruturado** para assegurar conformidade imediata com o _schema_;
+    
+- **Validação posterior (JSON Schema)** para detetar incoerências semânticas e aplicar políticas empresariais.
+    
+
+O _function calling_ mantém relevância como camada de integração inicial, mas **não deve ser utilizado isoladamente**, dada a sua vulnerabilidade a erros de estrutura e dependência de fornecedor.
+
+---
+
+## **5. Conclusão**
+
+Entre as três abordagens analisadas, a **combinação de decoding estruturado com validação por JSON Schema** constitui o **compromisso mais equilibrado** entre determinismo, portabilidade e robustez semântica — um modelo que a literatura de 2024–2025 aponta como o padrão emergente para pipelines industriais baseados em LLMs [7][8][9].
+
+Esta estratégia permite:
+
+- **Geração conforme na origem**, minimizando erros de parsing;
+    
+- **Verificação formal posterior**, independente do fornecedor;
+    
+- **Latência previsível**, adequada a sistemas interativos e em tempo real.
+    
+
+Assim, a fase de **Geração de JSON** do NL→Dash adota um paradigma **“constrained-first, validated-second”**, alinhado com a prática contemporânea em engenharia de IA fiável e determinística.
+
+---
+
+## **Referências**
+
+[1] OpenAI — _Function Calling Guide_ (2025). Disponível em: [https://platform.openai.com/docs/guides/function-calling](https://platform.openai.com/docs/guides/function-calling)  
+[2] OpenAI — _Function Calling in the API (Help Center)_, 2025.  
+[3] Guardrails AI — _Your Enterprise AI Needs Guardrails_ (2025).  
+[4] JSON Schema — _Official Specification_ (2024).  
+[5] Microsoft Research — _Guidance: Controlling LM Output_, 2025.  
+[6] Dottxt AI — _Outlines: Structured Outputs Complying with JSON Schema_, 2025.  
+[7] BentoML — _Structured Decoding in vLLM: A Gentle Introduction_, 2025.  
+[8] Raspanti, L. et al., _Grammar-Constrained Decoding Makes LLMs Better Logical Parsers_, _ACL Industry Track 2025_.  
+[9] Li et al. (2025). JSONSchemaBench: A Rigorous Benchmark... arXiv:2501.10868.
+[10] Wang et al. (2024). HammerBench: Fine-Grained Function-Calling... arXiv:2412.16516. [Cita em 2.1 limitações: "25% ↓ falhas mobile/real-time"]
+
+
