--- a/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation.md
+++ b/thesis intermedia/3- state of art/3.3/3.3.3 JSON Generation.md
@@ -501,36 +501,71 @@ Embora os resultados do HammerBench [10] reflitam cenários mais complexos do qu
 
 ---
 
-### **2.2 Validação Externa com Guardrails**
+## **2.2 Validação Externa com Guardrails**
 
-A validação externa consiste em interpor uma camada de **controlo de saída** entre o LLM e o sistema de execução.  
-Ferramentas como o **Guardrails AI** implementam esta abordagem, atuando como um **middleware de validação e reparação automática**: o modelo gera uma proposta de resposta (_draft_), que é então **avaliada, filtrada ou corrigida** por um conjunto de _guards_ (regras declarativas) antes de ser aceite pelo sistema de destino [3].
+==A **validação externa** atua como uma camada de _middleware_ entre o LLM e o sistema de destino, validando e, se necessário, reparando _outputs_ JSON após a geração. Este mecanismo constitui uma **segunda linha de defesa**, permitindo verificar tanto a conformidade sintática do JSON (por _schema_) como a plausibilidade dos valores gerados [1]–[3].==
 
-#### **Pontos fortes**
+==Ferramentas como o **Guardrails AI** implementam esta lógica por meio de _guards_, ou seja, regras declarativas (_validators_) que avaliam cada _output_ segundo critérios definidos pelo utilizador. O modelo propõe uma resposta (_draft_), sujeita a avaliação de _validators_ específicos; em caso de falha, o sistema pode executar ações corretivas pré-configuradas, incluindo rejeição automática (`exception`), regeneração condicionada ao erro (`reask`), correção automática (`fix`) ou encaminhamento para revisão manual [2], [4],== ~~[5]~~.
 
-- **Separação de responsabilidades:** o LLM propõe uma resposta, mas a decisão final de aceitação cabe à camada de validação (_guard layer_), reduzindo o impacto de erros sintáticos ou lógicos [3];
+### **Pontos Fortes**
+
+==**Separação de responsabilidades:** O LLM gera o _output_, mas a aceitação final depende de uma camada de validação independente; esta arquitetura implementa o princípio de _safety layering_, em que a geração e a verificação são isoladas funcionalmente para mitigar a propagação de erros sintáticos ou semânticos através da _pipeline_ [14][15].==
+
+
+==**Validação multi-camada:** A validação sintática assegura o cumprimento de tipos e estruturas (por exemplo, campos e formatos obrigatórios), enquanto a validação semântica avalia a plausibilidade e relevância dos conteúdos (por exemplo, garantir que `montante` está dentro dos limites do domínio financeiro, ou que as datas são coerentes entre si) [4], [5].==
+
+==**Reparação automática (_reask_, _fix_):** Se o _output_ for rejeitado, o Guardrails pode acionar mecanismos automáticos: `reask` instrui o LLM sobre o erro concreto, potenciando a correção autónoma (“o campo `data_vencimento` deve ser posterior a `data_emissao`”), enquanto `fix` pode truncar valores, normalizar formatos ou remover campos inválidos, reduzindo falhas manuais [2].==
+
+**Rastreabilidade:** O sistema gera _logs_ completos, registando quais _validators_ foram acionados, motivos de rejeição, campos afetados e _scores_ de confiança. Esta rastreabilidade é crucial em contextos regulados e facilita auditorias técnicas e de _compliance_ [7], [8].
+
+**Extensibilidade dos validators:** O Guardrails permite desenhar _validators_ de domínio, como verificação de formatos de IBAN, deteção de PII ou políticas internas de _compliance_ [4], [5].
+
+### **Limitações**
+
+**Latência adicional:** Cada _validator_ contribui para o tempo total de resposta. Validações sintáticas, semânticas e possíveis ciclos de _reask_ podem aumentar significativamente a latência da _pipeline_. _Validators_ complexos ampliam este _overhead_ [9].
+
+**Falsos positivos/calibração:** _Validators_ mal calibrados geram falsos positivos (rejeições injustificadas), degradando a eficiência e aumentando o custo. _Pipelines_ múltiplas agravam o fenómeno, tornando essencial calibrar _thresholds_ de confiança. Guardrails genéricos podem atingir apenas ~58% de precisão sem _tuning_ específico [10].
+
+**Apenas valida o output:** A ferramenta só inspeciona o JSON final. Factos plausíveis mas falsos, contraditórios ou alucinações podem passar sem deteção, a menos que o _validator_ seja especificamente desenhado para tal [11].
+
+**Manutenção evolutiva:** Mudanças de _schema_, normas ou políticas exigem manutenção constante. _Validators_ desatualizados podem gerar falsos negativos/positivos, exigindo monitorização rigorosa das métricas (_false positive rate_, _precision_, etc.) e revisão frequente das regras [12].
+
+**Redundância:** Se o mecanismo nativo já garante JSON conforme (por exemplo, _API_ de _outputs_ estruturados), a validação sintática externa apenas acrescenta latência [9].
+
+### **Adequação**
+
+A utilização de validação externa com Guardrails é especialmente recomendada quando:
+
+- **A validação semântica é obrigatória:** Quando JSON válido não basta, sendo crítico garantir limites, _compliance_ e plausibilidade de cada campo [4], [5].
     
-- **Flexibilidade e extensibilidade:** o Guardrails permite integrar _validators_. Além disso, o Guard pode **executar ações de falha** e **corrigir a saída** quando os critérios não são cumpridos, antes de devolver o resultado ao sistema [3][4];
+- **Rastreabilidade regulatória:** Para ambientes onde _compliance_ e _logs_ detalhados de todas as decisões automáticas são requisitos impostos por entidades reguladoras [7], [8].
     
-- **Auditabilidade:** a ferramenta regista logs e _traces_ detalhados, fornecendo **transparência e rastreabilidade** sobre como e por que uma resposta foi aceite ou rejeitada [3].
+- **Pipelines com múltiplos estágios de validação:** Permitindo validações incrementais, adaptadas à fase de processamento dos dados e com _guards_ contextuais [4], [12].
     
-
-#### **Limitações**
-
-- **Latência adicional:** cada resposta requer uma fase extra de validação e, por vezes, de reparação — um _trade-off_ entre fiabilidade e desempenho;
-    
-- **Complexidade de manutenção:** o desempenho e a cobertura da camada de validação dependem da qualidade dos _guards_ definidos; regras inconsistentes ou desatualizadas podem gerar falsos positivos ou falhas de validação; 
-    
-- **Escopo restrito à superfície visível:** a camada de Guardrails não “compreende” o raciocínio interno do modelo — apenas a forma e os valores da resposta final —, sendo ineficaz para corrigir raciocínios logicamente errados mas sintaticamente válidos [3][4][5].
+- **Ambientes críticos/regulados:** Para proteger contra fuga de PII, violações de políticas internas e aumentar a robustez de sistemas sensíveis [3], [9].
     
 
-#### **Adequação**
+**Exemplo prático:** Em _scoring_ bancário, múltiplos _guards_ são aplicados em sequência: (1) validação sintática para garantir campos obrigatórios; (2) validação semântica para regras como `montante <= 80% valor_garantia`; (3) validação de _compliance_ para bloquear dados PII ou violações regulatórias. Todas as rejeições ficam auditáveis para inspeção [13].
 
-A validação com Guardrails é indicada para **ambientes de produção sensíveis**, em que a fiabilidade da saída e a rastreabilidade são cruciais (por exemplo, **sistemas de análise financeira, geração de código ou relatórios regulatórios**).  
-Mesmo em pipelines com _function calling_, a integração de uma camada Guardrails serve como **segunda linha de defesa**, garantindo que respostas incorretas ou fora de especificação **não chegam à camada de execução** [3].
+---
 
-[3] [Introduction | Your Enterprise AI needs Guardrails](https://www.guardrailsai.com/docs)
-[5] [2310.10501](https://arxiv.org/pdf/2310.10501)
+### **Referências (IEEE – apenas fontes técnicas formais)**
+
+[1] Guardrails AI, _Use Validators for Structured Data (JSON) Validation_, 2024. Disponível em: [https://guardrailsai.com/docs/hub/how_to_guides/structured_data_validation](https://guardrailsai.com/docs/hub/how_to_guides/structured_data_validation)  
+[2] Guardrails AI, _Use on_fail Actions_, 2024. Disponível em: [https://guardrailsai.com/docs/how_to_guides/use_on_fail_actions](https://guardrailsai.com/docs/how_to_guides/use_on_fail_actions)  
+[3] Guardrails AI, _validator-template (Technical Documentation)_, 2024. Disponível em: [https://github.com/guardrails-ai/validator-template](https://github.com/guardrails-ai/validator-template)  
+[4] Python Instructor, _Understanding Semantic Validation with Structured Outputs_, 2025. Disponível em: [https://python.useinstructor.com/blog/2025/05/20/understanding-semantic-validation-with-structured-outputs/](https://python.useinstructor.com/blog/2025/05/20/understanding-semantic-validation-with-structured-outputs/)  
+[5] SKA Observatory, _Semantic Validation_, 2024. Disponível em: [https://developer.skao.int/projects/ska-telmodel/en/1.13.0/ska-semantic/guide.html](https://developer.skao.int/projects/ska-telmodel/en/1.13.0/ska-semantic/guide.html)  
+[6] Aveni, _AI Guardrails and Monitoring That Actually Work in Financial Services_, 2025. Disponível em: [https://aveni.ai/blog/ai-guardrails-and-monitoring-that-actually-work-in-financial-services/](https://aveni.ai/blog/ai-guardrails-and-monitoring-that-actually-work-in-financial-services/)  
+[7] arXiv, _Assessing the Auditability of AI-Integrating Systems_, 2025. Disponível em: [https://arxiv.org/html/2411.08906v1](https://arxiv.org/html/2411.08906v1)  
+[8] Cloudflare, _Guardrails in AI Gateway_, 2025. Disponível em: [https://blog.cloudflare.com/guardrails-in-ai-gateway/](https://blog.cloudflare.com/guardrails-in-ai-gateway/)  
+[9] Guardrails AI, _Performance Considerations_, 2024. Disponível em: [https://guardrailsai.com/docs/concepts/performance](https://guardrailsai.com/docs/concepts/performance)  
+[10] Dynamo, _How to Evaluate Guardrails_, 2024. Disponível em: [https://www.dynamo.ai/models/07-how-to-evaluate-guardrails](https://www.dynamo.ai/models/07-how-to-evaluate-guardrails)  
+[11] YLD, _Semantics and Syntax in GenAI Applications_, 2025. Disponível em: [https://www.yld.io/blog/semantics-and-syntax-in-genai-applications](https://www.yld.io/blog/semantics-and-syntax-in-genai-applications)  
+[12] Bud Ecosystem, _Guardrail Testing, Validating, Tools and Frameworks_, 2025. Disponível em: [https://blog.budecosystem.com/llm-guardrails-guardrail-testing-validating-tools-and-frameworks/](https://blog.budecosystem.com/llm-guardrails-guardrail-testing-validating-tools-and-frameworks/)  
+[13] Cloudflare, _Guardrails in AI Gateway (Case Example)_, 2025. Disponível em: [https://blog.cloudflare.com/guardrails-in-ai-gateway/](https://blog.cloudflare.com/guardrails-in-ai-gateway/)
+[14] Bai, Y. et al., _Constitutional AI: Harmlessness from AI Feedback_, arXiv preprint arXiv:2212.08073, 2022. Disponível em: https://arxiv.org/abs/2212.08073
+[15 ]Xu, A. et al., _Designing Multi-layered Runtime Guardrails for Foundation Model Applications_, arXiv preprint arXiv:2408.02205, 2024.
 
 ---
 
